tests/unit/fake_data_root/openstack/sos_commands/networking/ip_netns_exec_fip-32981f34-497a-4fae-914a-8576055c8d0d_ip6tables-save
# Generated by ip6tables-save v1.8.4 on Thu Feb 10 16:19:43 2022
*raw
:PREROUTING ACCEPT [34:6260]
:OUTPUT ACCEPT [14:1296]
:neutron-l3-agent-OUTPUT - [0:0]
:neutron-l3-agent-PREROUTING - [0:0]
-A PREROUTING -j neutron-l3-agent-PREROUTING
-A OUTPUT -j neutron-l3-agent-OUTPUT
COMMIT
# Completed on Thu Feb 10 16:19:43 2022
# Generated by ip6tables-save v1.8.4 on Thu Feb 10 16:19:43 2022
*mangle
:PREROUTING ACCEPT [34:6260]
:INPUT ACCEPT [9:504]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [14:1296]
:POSTROUTING ACCEPT [14:1296]
:neutron-l3-agent-FORWARD - [0:0]
:neutron-l3-agent-INPUT - [0:0]
:neutron-l3-agent-OUTPUT - [0:0]
:neutron-l3-agent-POSTROUTING - [0:0]
:neutron-l3-agent-PREROUTING - [0:0]
-A PREROUTING -j neutron-l3-agent-PREROUTING
-A INPUT -j neutron-l3-agent-INPUT
-A FORWARD -j neutron-l3-agent-FORWARD
-A OUTPUT -j neutron-l3-agent-OUTPUT
-A POSTROUTING -j neutron-l3-agent-POSTROUTING
COMMIT
# Completed on Thu Feb 10 16:19:43 2022
# Generated by ip6tables-save v1.8.4 on Thu Feb 10 16:19:43 2022
*filter
:INPUT ACCEPT [9:504]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [14:1296]
:neutron-filter-top - [0:0]
:neutron-l3-agent-FORWARD - [0:0]
:neutron-l3-agent-INPUT - [0:0]
:neutron-l3-agent-OUTPUT - [0:0]
:neutron-l3-agent-local - [0:0]
-A INPUT -j neutron-l3-agent-INPUT
-A FORWARD -j neutron-filter-top
-A FORWARD -j neutron-l3-agent-FORWARD
-A OUTPUT -j neutron-filter-top
-A OUTPUT -j neutron-l3-agent-OUTPUT
-A neutron-filter-top -j neutron-l3-agent-local
COMMIT
# Completed on Thu Feb 10 16:19:43 2022
